API-Catalogo/k8s/servico-api-catalogo.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-api-catalogo
  labels:
    app: service-api-catalogo
# spec:
#   type: ClusterIP
#   ports:
#   - port: 5000
#   selector:
#     app: my-api-catalogo
spec:
  ports:
  - port: 5000
    protocol: TCP
  selector:
    app: my-api-catalogo
